--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-login-page-using-nodejs",
   "version": "1.0.0",
-  "description": "This page is designed by Real Star Agency",
+  "description": "This page is designed by Real Stars",
   "main": "real.js",
   "repository": {
     "type": "git",
